
Release 5.2.2 (unreleased)
==========================

Bug fixes
---------

- CFDStudy: allow loading studies with no MESH or POST subdirectories.

- Fix improved hydrostatic treatment and PISO-like iterations
  (nterup > 1 and iphydr = 1).

Release 5.2.1 (Sep 26 2018)
===========================

Bug fixes
---------

- Lagrangian module: fix resuspension when having internal deposition.

- Compressible model: fix inverted arguments for user velocity source terms.

- Fixes to atmospheric chemistry model.

- Fix build on Mac OS X.

- Radiative model: fix GUI-defined BC selection between reflecting wall and
  prescribed flux BC for grey/black wall.

- Fix minor memory leak in histogram output.

- GUI: fix various crashes with th PyQt API 2(mostly on systems using PyQt5,
  as these default to the concerned API).

- GUI: fixes for addition and handling of coal classes.

- GUI: "rij" (coupled) field must return a NULL pointer for uncoupled RSM
  if initilization of turbulent variables is set by formula.

- Fix an uninitialised option (reconstruction flag) if arakawa coef. is 0 and
  there is anisotropic diffusion on pressure increment.

- GUI: fix default time stepping type (unsteady) when information missing
  from the XML file.

- Fix boundary value optional post-processing for scalars for other
  boundary conditions than walls.

- Fix face external force projection with tensorial diffusion
  and porous models 1, 2.
  This was impacting cases with head losses, improved pressure interpolation,
  and scalar or tensorial volume porosity models (iporos=1, 2).

- Fix Python 3 integer divison issues for code-code coupling process count
  distribution and batch duration conversions.

- Fix missing handling of isotropic mesh viscosity for ALE restart.

- Fix in severe accident (mass source terms for metal modelling).

- Major Fix: change the computation of the RHS for pressure.
  The form is back to the one before a1bed6b "div(rho u* +dt grad P^n)".